tests/neg/i5034.scala
lazy enum Color { // error
  case Blue
}
